--- a/app/web/view/layout.html
+++ b/app/web/view/layout.html
@@ -1,14 +1,27 @@
+<!--
+ * @Author: your name
+ * @Date: 2020-04-18 23:31:45
+ * @LastEditTime: 2020-04-19 18:51:35
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \egg\app\web\view\layout.html
+ -->
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
-  <title>IBlog</title>
-  <meta name='keywords'>
-  <meta name='description'>
-  <meta http-equiv='content-type' content='text/html;charset=utf-8'>
-  <meta name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui'>
-  <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
+    <title>IBlog</title>
+    <meta name='keywords'>
+    <meta name='description'>
+    <meta http-equiv='content-type' content='text/html;charset=utf-8'>
+    <meta name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui'>
+    <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
 </head>
+
 <body>
-  <div id='app'><!--vue-ssr-outlet--></div>
+    <div id='app'>
+        <!--vue-ssr-outlet-->
+    </div>
 </body>
+
 </html>
